bootstrap/core/lodestar-apps/lodestar-frontend-vanity-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: "lodestar-cert"
  labels:
    app: lodestar-frontend
  name: lodestar-frontend-vanity
  namespace: lodestar-frontend
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: lodestar-frontend
    weight: 100
  wildcardPolicy: None
